chore: changes after self review

--- a/docs/docs/api/over-keyboard-view/index.mdx
+++ b/docs/docs/api/over-keyboard-view/index.mdx
@@ -28,7 +28,7 @@ import lottie from "./over-keyboard-view.lottie.json";
 
 A simple way to display any view over the keyboard without hiding or closing it 🔥. It's perfect for displaying menus, tooltips, custom views, and more. Supports both iOS and Android.
 
-Think of it as a better alternative to `Modal`, offering an improved user experience by keeping the keyboard open while the view is displayed.
+Think of it as an alternative to `Modal`, offering an improved user experience by keeping the keyboard open while the view is displayed.
 
 :::info `KeyboardProvider` presence
 This component works independently of `KeyboardProvider`. If you're only using this component from the library, wrapping your entire app in `KeyboardProvider` is not required.
