chore: more clean up

--- a/docs/docs/recipes/architecture.mdx
+++ b/docs/docs/recipes/architecture.mdx
@@ -48,6 +48,7 @@ While both `useAnimatedKeyboard` from `react-native-reanimated` and this library
 |Works in `Modal` on Android|✅|🟠 <sup><small>2</small></sup>||
 |Is ready-to-use library for keyboard avoidance<sup><small>3</small></sup>|✅|❌|
 |`KeyboardToolbar` component|✅|❌|
+|`OverKeyboardView` component|✅|❌|
 <!-- prettier-ignore-end -->
 
 > <sup>1</sup> You need to unmount all components that use `useAnimatedKeyboard`
