fix: broken link (to be reverted when new version docs will be published)

--- a/docs/blog/2024-10-12-over-keyboard-view/index.mdx
+++ b/docs/blog/2024-10-12-over-keyboard-view/index.mdx
@@ -33,7 +33,7 @@ import Video from "@site/src/components/Video";
   <Video src="/video/over-keyboard-view-shared-transitions-v2.mp4" width={30} />
 </div>
 
-This component is perfect for countless applications! Whether you're building a photo gallery app or crafting a custom context menu that floats seamlessly over the screen (keeping the content behind visible) - the `OverKeyboardView` is the solution you've been waiting for!
+This component is perfect for countless applications! Whether you're building a photo gallery app or crafting a custom context menu that floats seamlessly over the screen (keeping the content behind visible while keyboard stays open) - the `OverKeyboardView` is the solution you've been waiting for!
 
 ## How to use it?
 
@@ -53,7 +53,7 @@ const App = () => {
 };
 ```
 
-You can also check a dedicated [API page](/docs/api/over-keyboard-view) to learn more about it.
+You can also check a dedicated [API page](/docs/next/api/over-keyboard-view) to learn more about it.
 
 ## What's else packed in a new release?
 
