feat: link to react-native documentation on View props

--- a/docs/docs/api/components/keyboard-toolbar/index.mdx
+++ b/docs/docs/api/components/keyboard-toolbar/index.mdx
@@ -40,6 +40,8 @@ import toolbar from "./toolbar.lottie.json";
 
 ## Props
 
+Inherits [all props from the react-native View component](https://reactnative.dev/docs/view#props).
+
 ### `button`
 
 This property allows to render custom touchable component for next, previous and done button.
