Make KeyboardToolbar inherit ViewProps & export default toolbar height (#603)
## 📜 Description

<!-- Describe your changes in detail -->
2 improvements:
- make the KeyboardToolbar inherit ViewProps to support complex cases
where you want to know the height of the KeyboardToolbar with an
onLayout event
- exports the KEYBOARD_TOOLBAR_HEIGHT to easily add the correct offset
on KeyboardAwareScrollView component

## 💡 Motivation and Context
<!-- Why is this change required? What problem does it solve? -->
The library did not provide any way of knowing the height of the
toolbar. I've done both solutions because I find it easier to just grab
the constant to set the bottom offset @kirillzyusko. Let me know if it's
an issue :)

I don't know if I should add tests for this kind of stuff, please let me
know.

<!-- If it fixes an open issue, please link to the issue here. -->
Fixes #601.

## 📢 Changelog

<!-- High level overview of important changes -->
<!-- For example: fixed status bar manipulation; added new types
declarations; -->
<!-- If your changes don't affect one of platform/language below - then
remove this platform/language -->

### JS

- Exports `KEYBOARD_TOOLBAR_HEIGHT` constant
- make `KeyboardToolbar` inherit `ViewProps` from `react-native`

## 🤔 How Has This Been Tested?

<!-- Please describe in detail how you tested your changes. -->
<!-- Include details of your testing environment, and the tests you ran
to -->
<!-- see how your change affects other areas of the code, etc. -->
Patched the lib locally and verified it works.

## 📸 Screenshots (if appropriate):

<!-- Add screenshots/video if needed -->
<!-- That would be highly appreciated if you can add how it looked
before and after your changes -->


## 📝 Checklist

- [ ] CI successfully passed
- [ ] I added new mocks and corresponding unit-tests if library API was
changed

---------

Co-authored-by: Corentin André <corentin.andre@shine.fr>

--- a/docs/docs/api/components/keyboard-toolbar/index.mdx
+++ b/docs/docs/api/components/keyboard-toolbar/index.mdx
@@ -36,8 +36,11 @@ import toolbar from "./toolbar.lottie.json";
 - **Supports dark/light theme** 🌓: Adapts to the theme settings of the user's device for a seamless experience.
 - **Extended accessibility support** 🔍: Ensures that all users, including those with disabilities, can navigate through inputs effectively.
 - **Full control over the buttons behavior** 🔧: Customize the actions triggered by the next, previous, and done buttons according to your needs.
+- **Extends ViewProps** 📜: Supports all the props that `View` component has.
 
 ## Props
+
+Inherits [all props from the react-native View component](https://reactnative.dev/docs/view#props).
 
 ### `button`
 
