--- a/docs/versioned_docs/version-1.12.0/api/components/keyboard-avoiding-view.mdx
+++ b/docs/versioned_docs/version-1.12.0/api/components/keyboard-avoiding-view.mdx
@@ -110,6 +110,10 @@ const styles = StyleSheet.create({
 
 ## Props
 
+### [`View Props`](https://reactnative.dev/docs/view#props)
+
+Inherits [View Props](https://reactnative.dev/docs/view#props).
+
 ### `behavior`
 
 Specify how to react to the presence of the keyboard. Could be one value of:
