docs: unify prop inheritance style for `KeyboardAwareScrollView` component

--- a/docs/docs/api/components/keyboard-aware-scroll-view.mdx
+++ b/docs/docs/api/components/keyboard-aware-scroll-view.mdx
@@ -62,7 +62,7 @@ Below is a table with the most important functions and their support in various 
 
 ## Props
 
-### ScrollView Props
+### [`ScrollView Props`](https://reactnative.dev/docs/scrollview#props)
 
 Inherits [ScrollView Props](https://reactnative.dev/docs/scrollview#props).
 
