--- a/docs/versioned_docs/version-1.12.0/api/components/keyboard-aware-scroll-view.mdx
+++ b/docs/versioned_docs/version-1.12.0/api/components/keyboard-aware-scroll-view.mdx
@@ -62,7 +62,7 @@ Below is a table with the most important functions and their support in various 
 
 ## Props
 
-### ScrollView Props
+### [`ScrollView Props`](https://reactnative.dev/docs/scrollview#props)
 
 Inherits [ScrollView Props](https://reactnative.dev/docs/scrollview#props).
 
