fix: match doc styles to RN docs

--- a/docs/docs/api/components/keyboard-toolbar/index.mdx
+++ b/docs/docs/api/components/keyboard-toolbar/index.mdx
@@ -40,7 +40,7 @@ import toolbar from "./toolbar.lottie.json";
 
 ## Props
 
-### [View Props](https://reactnative.dev/docs/view#props)
+### [`View Props`](https://reactnative.dev/docs/view#props)
 
 Inherits [View Props](https://reactnative.dev/docs/view#props).
 
