docs: meaningful page description for `OverKeyboardView`

--- a/docs/docs/api/over-keyboard-view/index.mdx
+++ b/docs/docs/api/over-keyboard-view/index.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 7
+description: Display views over keyboard without closing it.
 keywords:
   [
     react-native-keyboard-controller,
