--- a/docs/versioned_docs/version-1.14.0/api/over-keyboard-view/index.mdx
+++ b/docs/versioned_docs/version-1.14.0/api/over-keyboard-view/index.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 7
+description: Display views over keyboard without closing it.
 keywords:
   [
     react-native-keyboard-controller,
