--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 - (x) close after interactive gesture - sudden jump of 75 pixels -> fixed by detaching iav during `onInteractive`
 - (x) keyboard hidden -> remove inputAccessoryView - done in resignFirstResponder
 - (x) iOS 16 - after attaching fake iav we dispatch onEnd with height - 248 (298 - 50) -> ignore events after attaching iav, because in keyboardDidAppear `position` can be a random value (291 or 341)
+- (x) text input grow -> can not make interactive gesture (Optional(424.6666666666667)  424.66666666666674) - maybe because of frequent conversions to CGFloat? <- fixed via rounding
 - show after interactive - keyboard height is 386
-- text input grow -> can not make interactive gesture (Optional(424.6666666666667)  424.66666666666674) - maybe because of frequent conversions to CGFloat?
