feat: merge `offset` properties for `KeyboardToolbar`

--- a/docs/docs/api/components/keyboard-toolbar/index.mdx
+++ b/docs/docs/api/components/keyboard-toolbar/index.mdx
@@ -44,6 +44,10 @@ import toolbar from "./toolbar.lottie.json";
 
 Inherits [View Props](https://reactnative.dev/docs/view#props).
 
+### [`KeyboardStickyViewProps`](./keyboard-sticky-view)
+
+Inherits [KeyboardStickyViewProps](./keyboard-sticky-view).
+
 ### `button`
 
 This property allows to render custom touchable component for next, previous and done button.
