--- a/TODO
+++ b/TODO
@@ -4,9 +4,10 @@
 - (x) text input grow -> can not make interactive gesture (Optional(424.6666666666667)  424.66666666666674) - maybe because of frequent conversions to CGFloat? <- fixed via rounding
 - 1 show after interactive - keyboard height is 386
 - 2 show after interactive - iav is not attached again
-- 3 two events get dispatched when we remove iav in onInteractive - (dispatch `shouldIgnoreKeyboardEvents` in .hide (KEA)? - doesn't work because swizzle calls .hide when keyboard appear)
+- (x) 3 two events get dispatched when we remove iav in onInteractive - (dispatch `shouldIgnoreKeyboardEvents` in .hide (KEA)? - doesn't work because swizzle calls .hide when keyboard appear)
+- (x) 4 two events get dispatched after 2nd onInteractive (fix with pan gesture responder - when it's active ignore plain keyboard events)
 
-::  call actual code for hide only once
-::: dispatch ignore event when we actually hide iav (will fix 3)
+::  (x) call actual code for hide only once
+::: (x) dispatch ignore event when we actually hide iav (will fix 3)
 ::: (add `lastOffset`) - will fix 1 <- last time when I added it was resetting somehow, need to figure out where and why exactly
 ::: add code in `keyboardDidAppear` in KAE to increase/attach iav again (will fix 2)
