--- a/docs/docs/api/components/keyboard-sticky-view/index.mdx
+++ b/docs/docs/api/components/keyboard-sticky-view/index.mdx
@@ -57,7 +57,11 @@ const StickyFooter = () => {
 
 ## Props
 
-### offset
+### `enabled`
+
+A boolean prop indicating whether `KeyboardStickyView` is enabled or disabled. If disabled then view will be moved to its initial position (as keyboard would be closed) and will not react on keyboard movements. Default is `true`.
+
+### `offset`
 
 An object containing next properties:
 
