--- a/TODO
+++ b/TODO
@@ -8,7 +8,7 @@
 - (x) 4 two events get dispatched after 2nd onInteractive (fix with pan gesture responder - when it's active ignore plain keyboard events)
 - (x) 5 TimingAnimation is unsynchronized
 - (x) 6 hide interactively -> tap input many times -> keyboard is shown and composer is not moving and it looks like events are broken -> for RCTRootView we need to resign synchronously
-- 7 remove pan gesture responder stuff
+- (x) 7 remove pan gesture responder stuff
 - 8 resolve swiftlint issues
 - 9 resolve various flickers (test iOS 15 - 18)
 - 10 iOS 15 sometimes keyboardDidDisappear gets triggered before onKeyboardMove events (duration = 85) --> caused by constant usage of onMove?
