feat: `KeyboardToolbar.Exclude`

--- a/docs/docs/api/components/keyboard-toolbar/index.mdx
+++ b/docs/docs/api/components/keyboard-toolbar/index.mdx
@@ -295,6 +295,12 @@ const theme: KeyboardToolbarProps["theme"] = {
 Don't forget that you need to specify colors for **both** `dark` and `light` theme. The theme will be selected automatically based on the device preferences.
 :::
 
+## Components
+
+### `KeyboardToolbar.Exclude`
+
+This component is used to exclude some views from the traversal. It is useful when you want to skip specific view from being focused by toolbar arrow buttons.
+
 ## Example
 
 ```tsx
