--- a/docs/versioned_docs/version-1.16.0/api/components/keyboard-avoiding-view.mdx
+++ b/docs/versioned_docs/version-1.16.0/api/components/keyboard-avoiding-view.mdx
@@ -117,6 +117,7 @@ Specify how to react to the presence of the keyboard. Could be one value of:
 - `position`
 - `padding`
 - `height`
+- `translate-with-padding`
 
 ### `contentContainerStyle`
 
